nextcloud/nextcloud-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  ports:
  - name: http
    port: 8086
    targetPort: 8086
  selector:
    app: nextcloud
